--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="LinkTank">
 <head>
+    <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- local css -->
+    <link rel="stylesheet" href="./css/styles.css">
+    <!-- jQuery and Bootstrap js -->
+    <script src="http://code.jquery.com/jquery-3.2.1.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
+    <!-- Angular 1.6.5 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-route.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-resource.js" ></script>
+    <!-- local scripts -->
+    <script src="app.js"></script>
+    <script src="/js/controllers/HomeController.js" ></script>
+    <title>LinkTank</title>
 </head>
+
 <body>
-    
+
+
+
+    <div ng-view></div>
 </body>
 </html>
