--- a/client/index.html
+++ b/client/index.html
@@ -19,12 +19,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-route.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-resource.js" ></script>
-    <!-- local scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.js"></script>
+     <!-- local scripts -->
     <script src="app.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.js">
-    <script src="/js/controllers/HomeController.js" ></script>
+    <script src="/js/controllers/HomeController.js"></script>
     <script src="/js/controllers/LoginController.js"></script>
     <script src="/js/controllers/RegisterController.js"></script>
+    <script src="/js/services/userService.js"></script>
     <title>LinkTank</title>
 </head>
 
