--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,7 @@
 <body>
 
     <!-- navbar -->
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <!-- toggle effect and navbar brand -->
         <div class="navbar-header">
