--- a/client/index.html
+++ b/client/index.html
@@ -59,6 +59,7 @@
                     <ul class="dropdown-menu">
                         <li><a class="menu-item" href="/volunteer_login">Volunteer Login</a></li>
                         <li><a class="menu-item" href="/organization_login">Organization Login</a></li>
+                        <li><a class="menu-item" href="/organization_profile">Organization Profile</a></li>
                     </ul>
                 </li>
                 <li><a class="menu-item" href="#">About Us</a></li>
