Adds navbar directives

--- a/client/index.html
+++ b/client/index.html
@@ -25,8 +25,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.js"></script>
      <!-- local scripts -->
     <script src="app.js"></script>
+    <script src="/js/directives/userNav.js"></script>
     <script src="/js/controllers/HomeController.js"></script>
     <script src="/js/controllers/VolunteerLoginController.js"></script>
+    <script src="/js/controllers/VolunteerProfileController.js"></script>
     <script src="/js/controllers/RegisterController.js"></script>
     <script src="/js/controllers/OrganizationLoginController.js"></script>
     <script src="/js/services/userService.js"></script>
