--- a/client/index.html
+++ b/client/index.html
@@ -31,6 +31,7 @@
     <script src="/js/controllers/VolunteerProfileController.js"></script>
     <script src="/js/controllers/RegisterController.js"></script>
     <script src="/js/controllers/OrganizationLoginController.js"></script>
+    <script src="/js/controllers/OrganizationProfileController.js"></script>
     <script src="/js/services/userService.js"></script>
     <title>LinkTank</title>
 </head>
