--- a/client/index.html
+++ b/client/index.html
@@ -32,6 +32,7 @@
     <script src="/js/controllers/RegisterController.js"></script>
     <script src="/js/controllers/OrganizationLoginController.js"></script>
     <script src="/js/controllers/OrganizationProfileController.js"></script>
+    <script src="/js/controllers/VolunteerLogoutController.js"></script>
     <script src="/js/services/userService.js"></script>
     <title>LinkTank</title>
 </head>
@@ -63,6 +64,7 @@
                         <li><a class="menu-item" href="/volunteer_login">Volunteer Login</a></li>
                         <li><a class="menu-item" href="/organization_login">Organization Login</a></li>
                         <li><a class="menu-item" href="/organization_profile">Organization Profile</a></li>
+                        <li><a class="menu-item" href="/volunteer_logout">vol logout</a></li>
                     </ul>
                 </li>
                 <li><a class="menu-item" href="#">About Us</a></li>
