--- a/client/index.html
+++ b/client/index.html
@@ -65,7 +65,7 @@
                         <li><a class="menu-item" href="/volunteer_login">Volunteer Login</a></li>
                         <li><a class="menu-item" href="/organization_login">Organization Login</a></li>
                         <li><a class="menu-item" href="/organization_profile">Organization Profile</a></li>
-                        <li><a class="menu-item" href="/volunteer_profile">Volunteer Profile</a></li>
+                        <li><a class="menu-item" href="/volunteer_logout">vol logout</a></li>
                     </ul>
                 </li>
                 <li><a class="menu-item" href="#">About Us</a></li>
