fixes Organization registration and login using passport and bcrypt

--- a/client/index.html
+++ b/client/index.html
@@ -35,6 +35,7 @@
     <script src="/js/controllers/VolunteerLogoutController.js"></script>
     <script src="/js/services/userService.js"></script>
     <script src="/js/services/volunteerFactory.js"></script>
+    <script src="/js/services/organizationFactory.js"></script>
     <title>LinkTank</title>
 </head>
 
