Got contact us working and sendgrid sending messages to my email.

--- a/client/index.html
+++ b/client/index.html
@@ -26,6 +26,7 @@
      <!-- local scripts -->
     <script src="app.js"></script>
     <script src="/js/directives/userNav.js"></script>
+    <!--Controllers-->
     <script src="/js/controllers/HomeController.js"></script>
     <script src="/js/controllers/VolunteerLoginController.js"></script>
     <script src="/js/controllers/VolunteerProfileController.js"></script>
@@ -33,9 +34,12 @@
     <script src="/js/controllers/OrganizationLoginController.js"></script>
     <script src="/js/controllers/OrganizationProfileController.js"></script>
     <script src="/js/controllers/VolunteerLogoutController.js"></script>
+    <script src="/js/controllers/ContactController.js"></script>
+    <!--Factories/ Services-->
     <script src="/js/services/userService.js"></script>
     <script src="/js/services/volunteerFactory.js"></script>
     <script src="/js/services/organizationFactory.js"></script>
+    <script src="/js/services/emailFactory.js"></script>
     <title>LinkTank</title>
 </head>
 
