Adds OrganizationProfile/VolunteerProfile controllers and views

--- a/client/index.html
+++ b/client/index.html
@@ -35,6 +35,8 @@
     <script src="/js/controllers/OrganizationProfileController.js"></script>
     <script src="/js/controllers/VolunteerLogoutController.js"></script>
     <script src="/js/controllers/ContactController.js"></script>
+    <script src="/js/controllers/EditOrganizationProfileController.js"></script>
+    <script src="/js/controllers/EditVolunteerProfileController.js"></script>
     <!--Factories/ Services-->
     <script src="/js/services/userService.js"></script>
     <script src="/js/services/volunteerFactory.js"></script>
