Grabs event data in the back up to the party in the front

--- a/client/index.html
+++ b/client/index.html
@@ -38,6 +38,7 @@
     <script src="/js/services/emailFactory.js"></script>
     <script src="/js/services/uploadFileService.js"></script>
     <script src="/js/services/volImgFactory.js"></script>
+    <script src="/js/services/volEventListFactory.js"></script>
     <!--Controllers-->
     <script src="/js/controllers/HomeController.js"></script>
     <script src="/js/controllers/VolunteerLoginController.js"></script>
