Populates event info on Org Profile Page.

--- a/client/index.html
+++ b/client/index.html
@@ -39,6 +39,8 @@
     <script src="/js/services/uploadFileService.js"></script>
     <script src="/js/services/volImgFactory.js"></script>
     <script src="/js/services/volEventListFactory.js"></script>
+    <script src="/js/services/organizationEventsFactory.js"></script>
+    <script src="/js/services/eventFactory.js"></script>
     <!--Controllers-->
     <script src="/js/controllers/HomeController.js"></script>
     <script src="/js/controllers/VolunteerLoginController.js"></script>
