Refurbishes events.html and gets evnts to populate page

--- a/client/index.html
+++ b/client/index.html
@@ -55,6 +55,7 @@
     <script src="/js/controllers/ContactController.js"></script>
     <script src="/js/controllers/EditOrganizationProfileController.js"></script>
     <script src="/js/controllers/EditVolunteerProfileController.js"></script>
+    <script src="js/controllers/EventController.js"></script>
     <!--Factories/ Services-->
     <title>LinkTank</title>
 </head>
