adds volunteering for event functionality

--- a/client/index.html
+++ b/client/index.html
@@ -43,7 +43,7 @@
     <script src="/js/services/organizationPastEventsFactory.js"></script>
     <script src="/js/services/volUpcomingEventsFactory.js"></script>
     <script src="/js/services/volPastEventsFactory.js"></script>
-    <script src="/js/services/eventFactory.js"></script>
+    <!-- <script src="/js/services/eventFactory.js"></script> -->
     <!--Controllers-->
     <script src="/js/controllers/HomeController.js"></script>
     <script src="/js/controllers/VolunteerLoginController.js"></script>
