Allows events to be updated

--- a/client/index.html
+++ b/client/index.html
@@ -43,6 +43,7 @@
     <script src="/js/services/organizationPastEventsFactory.js"></script>
     <script src="/js/services/volUpcomingEventsFactory.js"></script>
     <script src="/js/services/volPastEventsFactory.js"></script>
+    <script src="/js/services/updateEventFactory.js"></script>
     <script src="/js/controllers/HomeController.js"></script>
     <script src="/js/controllers/VolunteerLoginController.js"></script>
     <script src="/js/controllers/VolunteerProfileController.js"></script>
@@ -53,7 +54,7 @@
     <script src="/js/controllers/ContactController.js"></script>
     <script src="/js/controllers/EditOrganizationProfileController.js"></script>
     <script src="/js/controllers/EditVolunteerProfileController.js"></script>
-    <script src="js/controllers/EventController.js"></script>
+    <!-- <script src="js/controllers/EventController.js"></script> -->
     <!--Factories/ Services-->
     <title>LinkTank</title>
 </head>
