Home page cleanup and new nav per user

--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.js">
     <script src="http://code.jquery.com/jquery-3.2.1.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
@@ -54,7 +53,7 @@
     <script src="/js/controllers/ContactController.js"></script>
     <script src="/js/controllers/EditOrganizationProfileController.js"></script>
     <script src="/js/controllers/EditVolunteerProfileController.js"></script>
-    <!-- <script src="js/controllers/EventController.js"></script> -->
+     <script src="js/controllers/EventController.js"></script> 
     <!--Factories/ Services-->
     <title>LinkTank</title>
 </head>
