Adds a list of volunteers to a particular Event Modal

--- a/client/index.html
+++ b/client/index.html
@@ -44,6 +44,7 @@
     <script src="/js/services/volPastEventsFactory.js"></script>
     <script src="/js/services/updateEventFactory.js"></script>
     <script src="/js/services/pastEventFactory.js"></script>
+    <script src="/js/services/volsForEventFactory.js"></script>
     <script src="/js/controllers/HomeController.js"></script>
     <script src="/js/controllers/VolunteerLoginController.js"></script>
     <script src="/js/controllers/VolunteerProfileController.js"></script>
