--- a/client/index.html
+++ b/client/index.html
@@ -45,6 +45,7 @@
     <script src="/js/services/updateEventFactory.js"></script>
     <script src="/js/services/pastEventFactory.js"></script>
     <script src="/js/services/volsForEventFactory.js"></script>
+    <!-- <script src="/js/controllers/volunteerForEventFactory.js"></script> -->
     <script src="/js/controllers/HomeController.js"></script>
     <script src="/js/controllers/VolunteerLoginController.js"></script>
     <script src="/js/controllers/VolunteerProfileController.js"></script>
